# ccxt-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  dump.py  prompt.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
config/: ace_rest.json  alpaca_rest.json  alpaca_ws.json  ascendex_rest.json  ascendex_ws.json  bequant_rest.json  bequant_ws.json  bigone_rest.json  binance_rest.json  binance_ws.json  binancecoinm_rest.json  binancecoinm_ws.json  binanceus_rest.json  binanceus_ws.json  binanceusdm_rest.json  binanceusdm_ws.json  bingx_rest.json  bingx_ws.json  bit2c_rest.json  bitbank_rest.json  bitbns_rest.json  bitcoincom_rest.json  bitcoincom_ws.json  bitfinex2_rest.json  bitfinex2_ws.json  bitfinex_rest.json  bitfinex_ws.json  bitflyer_rest.json  bitget_rest.json  bitget_ws.json  bithumb_rest.json  bithumb_ws.json  bitmart_rest.json  bitmart_ws.json  bitmex_rest.json  bitmex_ws.json  bitopro_rest.json  bitopro_ws.json  bitpanda_rest.json  bitpanda_ws.json  (+139 more)
examples/: CMakeLists.txt  okx_ticker_example.cpp
include/: ccxt.h
include/ccxt/base/: config.h  errors.h  exchange.h  exchange_base.h  exchange_impl.h  exchange_registry.h  json_helper.h  precise.h  types.h  websocket_client.h
include/ccxt/exchanges/: ace.h  alpaca.h  ascendex.h  bequant.h  bibox.h  bigone.h  binance.h  binancecoinm.h  binanceus.h  binanceusdm.h  bingx.h  bit2c.h  bitbank.h  bitbay.h  bitbns.h  bitcoincom.h  bitfinex.h  bitfinex2.h  bitflyer.h  bitget.h  bithumb.h  bithumbglobal.h  bitkub.h  bitmart.h  bitmex.h  bitopro.h  bitpanda.h  bitrue.h  bitso.h  bitstamp.h  bitteam.h  bittrex.h  bittrue.h  bitvavo.h  bl3p.h  blockchaincom.h  blofin.h  btcalpha.h  btcbox.h  btcex.h  (+93 more)
src/base/: errors.cpp  exchange.cpp  precise.cpp  websocket_client.cpp
src/exchanges/: ace.cpp  alpaca.cpp  ascendex.cpp  bequant.cpp  bibox.cpp  bigone.cpp  binance.cpp  binancecoinm.cpp  binanceus.cpp  binanceusdm.cpp  bingx.cpp  bit2c.cpp  bitbank.cpp  bitbay.cpp  bitbns.cpp  bitcoincom.cpp  bitfinex.cpp  bitfinex2.cpp  bitflyer.cpp  bitget.cpp  bithumb.cpp  bithumbglobal.cpp  bitkub.cpp  bitmart.cpp  bitmex.cpp  bitopro.cpp  bitpanda.cpp  bitrue.cpp  bitso.cpp  bitstamp.cpp  bitteam.cpp  bittrex.cpp  bittrue.cpp  bitvavo.cpp  bl3p.cpp  blockchaincom.cpp  blofin.cpp  btcalpha.cpp  btcbox.cpp  btcex.cpp  (+94 more)
src/exchanges/async/: ace_async.cpp  alpaca_async.cpp  ascendex_async.cpp  bequant_async.cpp  bigone_async.cpp  binance_async.cpp  binancecoinm_async.cpp  binanceus_async.cpp  binanceusdm_async.cpp  bingx_async.cpp  bit2c_async.cpp  bitbank_async.cpp  bitbay_async.cpp  bitbns_async.cpp  bitcmarket_async.cpp  bitcoincom_async.cpp  bitfinex2_async.cpp  bitfinex_async.cpp  bitflyer_async.cpp  bitget_async.cpp  bithumb_async.cpp  bitmart_async.cpp  bitmex_async.cpp  bitopro_async.cpp  bitpanda_async.cpp  bitrue_async.cpp  bitso_async.cpp  bitstamp_async.cpp  bitteam_async.cpp  bittrue_async.cpp  bitvavo_async.cpp  bl3p_async.cpp  blockchaincom_async.cpp  blofin_async.cpp  btcalpha_async.cpp  btcbox_async.cpp  btcmarkets_async.cpp  btcturk_async.cpp  bybit_async.cpp  cex_async.cpp  (+76 more)
src/exchanges/ws/: alpaca_ws.cpp  ascendex_ws.cpp  bequant_ws.cpp  binance_ws.cpp  binancecoinm_ws.cpp  binanceus_ws.cpp  binanceusdm_ws.cpp  bingx_ws.cpp  bitcoincom_ws.cpp  bitfinex2_ws.cpp  bitfinex_ws.cpp  bitflyer_ws.cpp  bitget_ws.cpp  bithumb_ws.cpp  bitmart_ws.cpp  bitmex_ws.cpp  bitopro_ws.cpp  bitpanda_ws.cpp  bitrue_ws.cpp  bitstamp_ws.cpp  bitvavo_ws.cpp  blockchaincom_ws.cpp  blofin_ws.cpp  bybit_ws.cpp  cex_ws.cpp  coinbase_ws.cpp  coinbaseadvanced_ws.cpp  coinbaseexchange_ws.cpp  (+51 more)
test/: CMakeLists.txt  base_tests.cpp  exchange_tests.cpp
(+196 files in other folders)
